--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <head>
   <title>Weather</title>
   <!-- require files here -->
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
+  <script src="./js/weatherChart.js"></script>
+  <script src="./js/init.js"></script>
+
 </head>
 <body>
   <canvas id="NYCWeatherChart" width="800" height="400"></canvas>
+<script id="chartArea">
+</script>
 </body>
 </html>
+Contact GitHub API Training Shop Blog About
